[package]
name = "proc-utils"
version = "0.1.0"
edition = "2021"
description = "Find process name of given socket source address and port"
license-file = "LICENSE"

[dependencies]

[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_find_process_by_socket"
harness = false